--- a/discount-mvp-backend/src/main/resources/application.properties
+++ b/discount-mvp-backend/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=discount-mvp
+
+# Database Configuration
+# Default: in-memory database (memory)
+# To use JPA with H2: app.database.type=jpa
+app.database.type=memory
+
+# JPA Configuration (only used when app.database.type=jpa)
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
+
+# H2 Database Configuration (only used when app.database.type=jpa)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
